Fix for bug 380021 - implement IAccessibleValue, r=aaronlev, sr=neil